
0.9.9i Feb 28, 2005
 * installed packages now parse out package location from /var/log/packages entry
 * added add_source() (libslapt)
 * add_deps_to_trans() returns early if passed pkg_info_t is NULL
 * configuration sources now dynamically created instead of static arrays
 * --search return installed packages as well
 * progress_cb for the progress callback is now part of rc_config structure (libslapt)
 * added public add_exclude() to configuration.c (libslapt)
 * init_regex now returns on failure
 * updated translations

0.9.9h Feb 12, 2005
 * removed hardcoded limits REQUIRED_LEN CONFLICTS_LEN SUGGESTS_LEN
 * added search_transaction_by_pkg() to make checks more specific
 * remove package by name-version now possible
 * updated example.slapt-getrc to point to 10.1 sources
 * make sure all dependencies for slapt-get are satisfied during dist-upgrade
 * ensure when removing a package and the packages it requires, the packages
   that are required are installed. thanks NIkkou (nibbana80 at wp dot pl)
 * improved version comparing
 * fixed bug when specifying specific versions of dependencies, thanks NIkkou
    (nibbana80 at wp dot pl)
 * simplified add_deps_to_trans()
 * updated sources in example.slapt-getrc (thanks Piotr Simon)
 * Makefile updates to symlink libslapt-$(VERSION).a to libslapt.a
 * documentation updates

0.9.9g Jan 30, 2005
 * fixed bug in search, installed packages did not show up when searching by
   package location
 * changed order of transaction, removes now happen first in case files in the
   packages to be removed are shared with those packages about to be installed
   or upgraded.
 * ensure that package removal doesn't happen when --download-only is specified
 * updated documentation
 * transaction report now reports sizes in kB or in MB
 * added check before downloading any packages that there is enough disk 
   space to accomodate both downloads and installed pkgs
 * added aaa_elflibs to the default exclude